challenge type Normal -> None (TODO change: Type -> InstanceType)
