# backend/api/routes/instances_delete/route.go
@@ -55,7 +55,7 @@ func Route(c *fiber.Ctx) error {
 		[]sqlc.UserRole{sqlc.UserRoleAuthor, sqlc.UserRoleAdmin}) {
 		return utils.Error(c, fiber.StatusNotFound, consts.ChallengeNotFound)
 	}
-	if chall.Info.Type == sqlc.DeployTypeNormal {
+	if chall.Info.Type == sqlc.DeployTypeNone {
 		return utils.Error(c, fiber.StatusBadRequest, consts.ChallengeNotInstanciable)
 	}
 
